[package]
name = "evas-sys"
version = "0.1.0"
authors = ["Nigel Tan <ntan2@gmail.com>"]

[dependencies]
libc = "0.2"

[dependencies.efl-sys]
path = "../efl-sys"
version = "0.1.0"

[dependencies.eina-sys]
path = "../eina-sys"
version = "0.1.0"

[dependencies.eo-sys]
path = "../eo-sys"
version = "0.1.0"

[dependencies.emile-sys]
path = "../emile-sys"
version = "0.1.0"
